<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SYM Template Activity</string>
    <string name="email">E-mail</string>
    <string name="psw">Password</string>
    <string name="signin">Sign in</string>
    <string name="wronglogin">Login failed</string>
    <string name="wrong">Email or Password not recognized</string>
    <string name="good">Valid login, welcome !</string>
    <string name="fakeMail">Mail adress invalid</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="todo">TODO</string>
    <string name="description">description</string>

</resources>
