<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/PrintIMEI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview1"></TextView>


    <TextView
        android:id="@+id/printMail"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="@string/textview2"></TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"></ImageView>

</LinearLayout>